<resources>
    <string name="app_name">DeliveryOriginal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delivery_original">Delivery Original</string>
    <string name="explore_your_dream_food">Explore your dream food.</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in_2">Sign In</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
</resources>